tests/paczka1/fuzzy1/54095476.err
Error in line 7: aTpaI7 A228 66,8
Error in line 26: bmyv5qm7 A422 319,3
Error in line 16: WKNwSVbS S260 56,5
